[metadata]
name = fetch-nasa-epic
summary = Fetch images from Nasa's EPIC website of the Earth 
description-file =
    README.rst
author = Walter A. Boring IV
author-email = waboring@hemna.com
home-page = 
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    nasaepic = nasaepic.nasaepic:main 

[files]
packages =
    nasa_epic

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
